# personal-profile

./: .eslintignore  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  check-db.sql  check-db2.sql  check-function.sql  check-vector.sql  docker-compose.yml  fix-insert.sql  fix-match-function.sql  fix-vector.sql  fix-vector2.sql  middleware.ts  next.config.js  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  test-match.sql  test-match2.sql  test-match3.sql  test-query.sql  test-query2.sql  test-vector.sql
.agents/agents/: e2e-test-executor.md  frontend-engineer.md  go-backend-impl.md  integration-test-runner.md  requirement-designer.md  (+1 more)
agent-service/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
agent-service/app/: __init__.py  auth.py  config.py  main.py
agent-service/app/agents/: learning_coach.py
agent-service/app/api/: chat.py  generate.py
agent-service/app/db/: models.py  session.py
agent-service/app/models/: schemas.py
agent-service/app/tools/: learning.py
app/: HomeClient.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts  template.tsx
backend/: Dockerfile  go.mod  go.sum
docs/: github-integration.md  react-agent-usage.md
lib/: notion.ts
lib/ai/: tools.ts  (+9 more)
public/: manifest.json
scripts/: evaluate-ragas.py  evaluate-retrieval.js  harness-check.js  init-knowledge-base.ts  publish-juejin.ts  rebuild-knowledge.js  run-rag-experiments.js
supabase/: match_knowledge_function.sql
(+245 files in other folders)
